--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
-        "livewire/livewire": "^2.10"
+        "livewire/livewire": "^2.10",
+        "milon/barcode": "^8.0",
+        "woenel/prpcmblmts": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
